--- a/html/index.html
+++ b/html/index.html
@@ -26,18 +26,26 @@
 <body>
     <header class="header">
     <div class="container">
-        <div class="row">
-            <div class="col-sm-4"><a href="index.html"><img src="assets/images/Rage_Logo.png" alt="Rage" title="Rage"></a></div>
-            <div class="col-sm-8">
-                <ul class="header__menu">
-                    <li class="active"><a href="index.html" title="DASHBOARD">DASHBOARD</a></li>
-                    <li><a href="javascript:;" title="JURY">JURY</a></li>
-                    <li><a href="javascript:;" title="RULES">RULES</a></li>
-                    <li class="header__logout"><a href="javascript:;" title="LOGOUT">LOGOUT</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
+		<div class="header_left">
+			<a href="index.html"><img src="assets/images/Rage_Logo.png" alt="Rage" title="Rage"></a>
+			<a class="header__menuMobile" href="javascript:;" title="menu icon">
+				<span class="header__iconBbar"></span>
+				<span class="header__iconBbar"></span>
+				<span class="header__iconBbar"></span>
+			</a>
+		</div>
+		<div class="header_right">
+			<div class="header__mobilePostion">
+				<a href="javascript:;" class="header__mobMenuClose">X</a>
+				<ul class="header__menu">
+					<li class="active"><a href="index.html" title="DASHBOARD">DASHBOARD</a></li>
+					<li><a href="javascript:;" title="JURY">JURY</a></li>
+					<li><a href="javascript:;" title="RULES">RULES</a></li>
+					<li class="header__logout"><a href="javascript:;" title="LOGOUT">LOGOUT</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
 </header>
     <main class="dashboard">
         <div class="container">
